fix: 이전글/다음글 카드 높이 동일하게 맞춤 (flex stretch)

--- a/_sass/_hux-blog.scss
+++ b/_sass/_hux-blog.scss
@@ -611,19 +611,16 @@ code, kbd, pre, samp {
 }
 
 .post-container .pager li {
-    width: 48%;
-}
-
-.post-container .pager li.next {
-    float: right;
-}
-
-.post-container .pager li.previous {
-    float: left;
+    flex: 1 1 0;
+    min-width: 0;
 }
 
 .post-container .pager li > a {
     width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .post-container .pager li > a > span {
@@ -710,6 +707,7 @@ ul.pager {
     margin: 20px 0 0;
     padding: 0;
     display: flex;
+    align-items: stretch;
     gap: 16px;
 }
 
